# rust_practice

./: Cargo.toml  rust_practice.code-workspace
as-ref/: Cargo.toml
as-ref/src/: main.rs
ascii-color/: Cargo.toml
ascii-color/src/: main.rs
async-demo/: Cargo.toml
async-demo/src/: main.rs
at-bind/: Cargo.toml
at-bind/src/: main.rs
box-practice/: Cargo.toml
box-practice/src/: main.rs
cmd/src/: main.rs
cow/: Cargo.toml
cow/src/: main.rs
dynamic-dispatch/: Cargo.toml
edition/: Cargo.toml
edition/src/: main.rs
for-each/: Cargo.toml
for-each/src/: main.rs
if-let/src/: main.rs
into-try-into/: Cargo.toml
into-try-into/src/: main.rs
iter/src/: main.rs
iters/src/: main.rs
let-else/: Cargo.toml
let-else/src/: main.rs
macros/src/: main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
map/src/: main.rs
ord/: Cargo.toml
ord/src/: main.rs
partial-eq/: Cargo.toml
partial-eq/src/: main.rs
pointer/src/: main.rs
question-mark/: Cargo.toml
question-mark/src/: main.rs
rc/src/: main.rs
refcell/src/: main.rs
str/src/: main.rs
trait-practice/src/: main.rs
try-from/: Cargo.toml
try-from/src/: main.rs
