[workspace]
resolver = "2"
members = [
    "async-demo",
    "at-bind",
    "cow",
    "dynamic-dispatch",
    "for-each",
    "if-let",
    "into-try-into",
    "iter",
    "let-else",
    "macros", "mandelbrot",
    "map",
    "partial-eq",
    "pointer",
    "question-mark",
    "rc",
    "refcell",
    "try-from",
]
