[workspace]
resolver = "2"
members = [ "as-ref",
    "async-demo",
    "at-bind",
    "cow",
    "dynamic-dispatch",
    "for-each",
    "if-let",
    "into-try-into",
    "iter",
    "let-else",
    "macros", "mandelbrot",
    "map",
    "partial-eq",
    "pointer",
    "question-mark",
    "rc",
    "refcell",
    "try-from",
]
