[workspace]
resolver = "2"
members = [
    "as-ref",
    "ascii-color",
    "async-demo",
    "at-bind",
    "box-practice", "cmd",
    "cow",
    "dynamic-dispatch",
    "edition",
    "for-each",
    "if-let",
    "into-try-into",
    "iter",
    "iters",
    "let-else",
    "macros",
    "mandelbrot",
    "map",
    "ord",
    "partial-eq",
    "pointer",
    "question-mark",
    "rc",
    "refcell", "str",
    "trait-practice",
    "try-from",
]
